small fix for td wrapping
--HG--
branch : 3.4

--- a/template/default/SASS/bootstrap-custom.scss
+++ b/template/default/SASS/bootstrap-custom.scss
@@ -3196,6 +3196,9 @@ a.btn, button{
 }
 
 /* Tables CSS */
+td {
+    white-space: normal !important;
+}
 .in_table_h{
     font-family: Roboto, sans-serif;
     font-size: 15px;
